fix: minor fix in app.py and change Readme
